--- a/styles.css
+++ b/styles.css
@@ -73,21 +73,20 @@ body html {
   position: absolute;
   top: 20px;
   right: 26px;
-  font-size: 18px;
   flex: 1 1 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   color: rgb(255, 255, 255);
-  text-shadow: 0px 0px 20px rgb(126, 126, 126);
+  text-shadow: 0px 0px 20px rgb(153, 153, 153);
 }
 
-#location {
-  font-size: 1.5em;
-}
-
-#temperature,
+#location,
 #description {
+  font-size: 1em;
+}
+
+#temperature {
   font-size: 2em;
 }
